--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Python: Current File (Integrated Terminal)",
             "type": "python",
@@ -18,7 +17,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args" : ["-c","pcan"]
+            "args" : ["-c","pcan","-i","10"]
         },
         {
             "name": "Python: Current File (External Terminal)",
