--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "name": "Python: Current File (Integrated Terminal)",
             "type": "python",
@@ -17,7 +18,15 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args" : ["-c","pcan","-i","10"]
+            "args" : ["-c","pcan"]
+        },
+        {
+            "name": "Python: Phantom_pi, pcan, refrence search on",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args" : ["-c","pcan","-r","3"]
         },
         {
             "name": "Python: Current File (External Terminal)",
