--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,8 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
     
         {
             "name": "Python: Current File (Integrated Terminal)",
@@ -26,7 +28,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args" : ["-c","pcan","-r","3"]
+            "args" : ["-c","pcan","-r","3", "-i", "-20" ]
         },
         {
             "name": "Python: Current File (External Terminal)",
