--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args" : ["-c","pcan","-r","3"],
+            "args" : ["-c","pcan","-r","3","--add-axis","2 3 4 .10 5 6 .05"],
         },
         {
             "name": "Python: Phantom_pi, pcan, init and rfs on",
