--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ mccabe==0.6.1
 pylint==2.4.4
 pyserial==3.4
 python-can==3.3.2
-PyTrinamic==0.1.18
+PyTrinamic
 six==1.14.0
 typed-ast==1.4.1
 wrapt==1.11.2
